--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>sivaprasad</groupId>
-  <artifactId>project</artifactId>
+  <groupId>group12</groupId>
+  <artifactId>project12</artifactId>
   <packaging>war</packaging>
   <version>1.0</version>
-  <name>project</name>
+  <name>project12</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -56,7 +56,7 @@
   </dependencies>
 
   <build>
-    <finalName>project</finalName>
+    <finalName>project12</finalName>
     <sourceDirectory>src/java</sourceDirectory>
     <outputDirectory>target/classes</outputDirectory>
     <plugins>
